db-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress-db
  template:
    metadata:
      labels:
        app: wordpress-db
    spec:
      imagePullSecrets:
        - name: ecr-secret
      containers:
      - name: mariadb
        image: 992382545251.dkr.ecr.us-east-1.amazonaws.com/mariadb-nitzan:latest
        ports:
        - containerPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress-db-service
spec:
  type: ClusterIP
  selector:
    app: wordpress-db
  ports:
  - port: 3306
    targetPort: 3306
