db-statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-db-service
  labels:
    app: wordpress-db
spec:
  type: ClusterIP
  ports:
  - port: 3306
    targetPort: 3306
  selector:
    app: wordpress-db
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: wordpress-db
spec:
  serviceName: "wordpress-db-service"
  replicas: 1
  selector:
    matchLabels:
      app: wordpress-db
  template:
    metadata:
      labels:
        app: wordpress-db
    spec:
      imagePullSecrets:
        - name: ecr-secret
      containers:
      - name: mariadb
        image: 992382545251.dkr.ecr.us-east-1.amazonaws.com/mariadb-nitzan:latest
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
  volumeClaimTemplates:
  - metadata:
      name: mysql-persistent-storage
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
